--- a/package.xml
+++ b/package.xml
@@ -144,6 +144,7 @@
         <members>ScorecardMetric-Scorecard Metric Layout</members>
         <members>Solution-Solution Layout</members>
         <members>Task-Task Layout</members>
+        <members>Test_Obj__c-TestObj Layout</members>
         <members>User-User Layout</members>
         <name>Layout</name>
     </types>
