--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,10 @@
         <name>AssignmentRules</name>
     </types>
     <types>
+        <members>DataCloudGeoLocation</members>
+        <name>CleanDataService</name>
+    </types>
+    <types>
         <members>Internal Zone</members>
         <name>Community</name>
     </types>
