--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>46.0</version>
+    <version>50.0</version>
     <types>
+        <members>A0</members>
         <members>Test</members>
         <name>ApexClass</name>
     </types>
